--- a/CodeChef/Past Contests/.vscode/settings.json
+++ b/CodeChef/Past Contests/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "iostream": "cpp",
         "ostream": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "cmath": "cpp",
+        "complex": "cpp"
     }
 }
